Refactor and create own record class for journal information move to own gradle task and file